adding script for home page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
             display: flex;
             gap: 14px;
         }
-   
+        #displayMovie{
+            height: 222px;
+            border: 1px solid black;
+        }
     </style>
 </head>
 <body>
@@ -52,6 +55,7 @@
         </div>
     </div>
     <div id="result"></div>
+    <div id="displayMovie"></div>
 </body>
 </html>
 <script src="./index.js"></script>
